generalize the 2 value addition to n values (completed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,6 @@ add_executable(todo main.cpp
         todo/include/Party.h
         todo/src/Party.cc
         todo/include/utils/constants.h
+        todo/include/utils/ShareUtils.h
+        todo/src/utils/ShareUtils.cc
 )
